@@ -1,5 +1,15 @@
 2004-01-28  David Hyatt  <hyatt@apple.com>
 
+	Fix for 3537694, make blocks for parents of inline children be axobjects.
+	
+        Reviewed by kocienda
+
+        * kwq/KWQAccObject.mm:
+        (-[KWQAccObject role]):
+        (-[KWQAccObject accessibilityIsIgnored]):
+
+2004-01-28  David Hyatt  <hyatt@apple.com>
+
 	Make AtomicString a new class that owns DOMStrings, instead of using KJS::Identifier.  One day when we
 	convert DOMString and UString to have the same underlying rep, then these classes could possibly re-merge.
 	For now this provides an easy migration path for all the code that is using DOMStringImpl*.
